# mp-rs

./: Cargo.toml  LICENSE  README.md
src/: actions.rs  cli.rs  lib.rs  main.rs  ui.rs
